--- a/blog--ui/src/pages/write/write.css
+++ b/blog--ui/src/pages/write/write.css
@@ -2,7 +2,13 @@
     padding-top: 50px;
     background-color: black
   }
-  
+ .namee{
+  color: white;
+  display: flex;
+  font-family: sans-serif;
+  margin-top: 3px;
+ 
+ } 
   .writeImg {
     margin-left: 150px;
     width: 70vw;
@@ -32,8 +38,11 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    margin-left: 8px;
   }
-  
+  .box{
+    display: flex;
+  }
   .writeInput {
     font-size: 30px;
     border: none;
@@ -68,7 +77,7 @@
     padding: 10px;
     border: none;
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 20px;
     cursor: pointer;
     display: flex;
     align-items: center;
