--- a/blog--ui/src/pages/login/login.css
+++ b/blog--ui/src/pages/login/login.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     background: 
-      url("https://img.freepik.com/free-vector/abstract-blue-light-pipe-speed-zoom-black-background-technology_1142-9530.jpg?t=st=1726340120~exp=1726343720~hmac=0c2e5a311160838566ed0cc27f639a20e0674adf4cf1039ce937b53c78eb3554&w=1060");
+      url("public/loginback.jpg");
     background-size: cover;
   }
   
