--- a/blog--ui/src/pages/register/register.css
+++ b/blog--ui/src/pages/register/register.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     background: 
-    url("https://img.freepik.com/free-vector/abstract-blue-light-pipe-speed-zoom-black-background-technology_1142-9530.jpg?t=st=1726340120~exp=1726343720~hmac=0c2e5a311160838566ed0cc27f639a20e0674adf4cf1039ce937b53c78eb3554&w=1060");
+    url("public/loginback.jpg");
   background-size: cover;
     background-size: cover;
   }
@@ -13,12 +13,14 @@
   .registerTitle {
     font-size: 50px;
     color: white;
+    margin-right: 5px;
   }
   
   .registerForm {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+    width: 20%;
   }
   
   .registerForm > label {
@@ -29,7 +31,7 @@
     padding: 10px;
     background-color: white;
     border: none;
-    border-radius: 10px;
+    border-radius: 3px;
   }
   
   .registerInput:focus {
@@ -43,7 +45,7 @@
     color: white;
     padding: 10px;
     border: none;
-    border-radius: 10px;
+    border-radius: 3px;
     text-align: center;
   }
   
