--- a/blog--ui/src/pages/register/register.css
+++ b/blog--ui/src/pages/register/register.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     background: 
-    url("public/loginback.jpg");
+    url("https://i.ibb.co/VxYVZXH/loginback.jpg");
   background-size: cover;
     background-size: cover;
   }
